# bitews

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
docs/: ideas.txt  todo.txt
examples/: client.rs
src/: bite.rs  bitecon.rs  bites.rs  conn.rs  connection.rs  data.rs  filemap.rs  main.rs  tungscon.rs
src/bite_client/: bite.rs  bite_reader.rs  bite_writer.rs  bitec.rs  message.rs  mod.rs
web/: client.html  index.html  style.css  ws-client.html
