[package]
name = "bitews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
axum = { version = "0.5.16", features = ["ws", "headers"] }
futures = "0.3.24"
polling = "2.3.0"
crossbeam-channel = "0.5.6"
