[package]
name = "bitews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.5.17", features = ["ws", "headers"] }
futures = "0.3.26"
log = "0.4.17"
pretty_env_logger = "0.4.0"
